<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/textDark"
        android:textSize="@dimen/_16ssp"
        tools:text="Title" />


    <FrameLayout
        android:id="@+id/frmImage"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_below="@+id/tvTitle">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_1sdp"
            app:cardCornerRadius="@dimen/_16sdp"
            app:cardElevation="0dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/roundedBottomImageView4dp" />
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frmImage"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:drawablePadding="@dimen/_8sdp"
        android:textColor="@color/textDark"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        tools:text="Message" />

    <TextView
        android:id="@+id/lblMobileNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserName"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:ems="5"
        android:text="@string/lbl_mobile_no"
        android:textColor="@color/textGrey"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/tvUserContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserName"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_toRightOf="@+id/lblMobileNo"
        android:drawablePadding="@dimen/_8sdp"
        android:textColor="@color/textDark"
        android:textSize="@dimen/_14ssp"
        tools:text="9898765456" />

    <TextView
        android:id="@+id/lblNfcCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserContact"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:ems="5"
        android:text="@string/lbl_nsc_code"
        android:textColor="@color/textGrey"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvNfcNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserContact"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_toEndOf="@+id/lblNfcCode"
        android:drawablePadding="@dimen/_8sdp"
        android:textColor="@color/textDark"
        android:textSize="@dimen/_14ssp"
        tools:text="23456789"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/lblGiftBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNfcNo"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:ems="5"
        android:text="@string/gift_by"
        android:textColor="@color/textGrey"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/tvGiftBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNfcNo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_toEndOf="@+id/lblGiftBy"
        android:drawablePadding="@dimen/_8sdp"
        android:textColor="@color/textDark"
        android:textSize="@dimen/_14ssp"
        tools:text="Rakesh Patel " />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGiftBy"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            tools:text="@string/lbl_cancel"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="Okay" />

    </LinearLayout>
</RelativeLayout>